--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 </head>
 <body>
 
-    <header class="header">
-        <div class="logo">
-          <img src="" alt="">
-        </div>
-        <nav class="menu">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#servicos">Serviços</a></li>
-            <li><a href="#contato">Contato</a></li>
-          </ul>
+  <header>
+    <div class="limitador">
+        <h1><a href="index.html">Mayara Lingerie</a></h1>
+        <nav>
+            <h2><a href="">Menu &equiv;</a></h2>
+            <ul class="links-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
         </nav>
-      </header>
+    </div>
+
+</header>
 
 
 
