--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         header {
             position: sticky;
             top: 0;
-            background-color: var(--cor-clara);
+            background-color: var(#fff);
             z-index: 100;
         }
 
         nav h2 a {
-            color: var(--cor-escura);
+            color: var(#000);
             font-size: 1.2rem;
             padding: 1rem;
             display: inline-block;
