--- a/index.html
+++ b/index.html
@@ -2,158 +2,130 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mayara Lingerie</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        body,
-        h1,
-        h2,
-        p,
-        figure,
-        nav ul {
-            margin: 0;
-            padding: 0;
-        }
+  <title>Mayara Lingerie</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-        a {
-            text-decoration: none;
-        }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fafafa;
+      color: #333;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
-        h1 {
-            font-family: Raleway, sans-serif;
-            text-transform: uppercase;
-            font-weight: 800;
-            font-size: 1.5rem;
-        }
+    .container {
+      display: flex;
+      flex-direction: column;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background-color: #fff;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
 
-        h1 a {
-            background-color: var(#000);
-            color: var(#fff);
-            padding: 0.3rem 1rem;
-            border-radius: 4px;
-        }
+    }
 
+    .principal {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
 
-        header .limitador {
-            height: 12vh;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+    }
+    .conteudo {
+      flex: 1;
+      /* tamanho minimo para conteudo */
+      min-width: 290px;
+    }
 
-        }
+    h1,
+    h2 {
+      color: #0C0C0C;
+      /* tamanho da fonte responsiva */
+      font-size: calc(1.4rem + 0.5vw);
+      margin-left: 0.4rem;
 
-        header {
-            position: sticky;
-            top: 0;
-            background-color: var(#fff);
-            z-index: 100;
-        }
+    }
 
-        nav h2 a {
-            color: var(#000);
-            font-size: 1.2rem;
-            padding: 1rem;
-            display: inline-block;
-        }
+    p {
+      font-size: calc(0.9rem + 0.3vw);
+      line-height: 1.6;
+      margin-bottom: 0.75rem;
+      margin-left: 0.4rem;
+    }
+    .img-container {
+      text-align: center;
+      margin-top: 3rem;
 
+    }
 
-        nav h2 a:hover,
-        nav h2 a:focus,
-        .links-menu a:hover,
-        .links-menu a:focus {
-            background-color: var(#31363F);
-        }
+    .img-container img {
+      max-width: 100%;
+      border-radius: 50%;
+      /* limitando a largura maxima */
+      height: 250px;
+      width: 250px;
+    }
 
+    .conteudo img {
+      max-width: 100%;
+      padding: 1rem;
+    }
 
-        .links-menu {
-            list-style: none;
+    header {
+      color: #fff;
+      border-radius: 8px;
+    }
 
-            display: none;
-        }
+    h1 {
+      color: #fff;
+    }
 
-        .links-menu a {
-            color: var(#000);
-            font-weight: bold;
-            display: flex;
-            height: 50px;
-            justify-content: center;
-            align-items: center;
-        }
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
 
-        .links-menu.aberto {
+    .redes a {
+      color: #0C0C0C;
+    }
 
-            display: flex;
-
-
-            flex-direction: column;
-
-            position: absolute;
-            left: 0;
-            right: 0;
-
-            background-color: var(#fff);
-        }
-
-        @media screen and (min-width: 570px) {
-            nav h2 {
-                display: none;
-            }
-
-            .links-menu {
-                display: flex;
-            }
-
-            nav {
-                width: 60%;
-            }
-
-            .links-menu li {
-                width: 100%;
-            }
-
-            .front-end img {
-                height: 150px;
-            }
-        }
-
-        @media screen and (min-width: 1000px) {
-            html {
-                font-size: 18px;
-            }
-
-            .limitador {
-                max-width: 1000px;
-            }
-        }
-    </style>
+    @media screen and (max-width: 768px) {
+      .container {
+        margin: 1rem;
+        padding: 1rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
-
+  <div class="container">
     <header>
-        <div class="limitador">
-            <h1><a href="index.html">Mayara Lingerie</a></h1>
-            <nav>
-                <h2><a href="">Menu &equiv;</a></h2>
-                <ul class="links-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-
+      <div class="img-container">
+        <img src="imagens/logo-mayara.jpeg" alt="Mayara Lingerie">
+      </div>
+      <h1></h1>
     </header>
-
-
-
-
+    <!-- principal -->
+    <div class="principal">
+      <div class="conteudo">
+        <hr>
+        <h2>Principal</h2>
+        <img src="imagens/conjunto.jpeg" alt="">
+        <img src="imagens/saia.jpeg" alt="">
+        <img src="imagens/espartilho.jpeg" alt="">
+      </div>
+    </div>
+  </div>
+  </div>
 </body>
 
 </html>
