--- a/index.html
+++ b/index.html
@@ -83,20 +83,6 @@
       color: #fff;
       border-radius: 8px;
     }
-
-    h1 {
-      color: #fff;
-    }
-
-    a {
-      text-decoration: none;
-      color: #fff;
-    }
-
-    .redes a {
-      color: #0C0C0C;
-    }
-
     @media screen and (max-width: 768px) {
       .container {
         margin: 1rem;
@@ -112,7 +98,15 @@
       <div class="img-container">
         <img src="imagens/logo-mayara.jpeg" alt="Mayara Lingerie">
       </div>
-      <h1></h1>
+      <nav>
+        <h2><a href="">Menu &equiv;</a></h2>
+        <ul class="links-menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="servicos.html">Serviços</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
     </header>
     <!-- principal -->
     <div class="principal">
