--- a/index.html
+++ b/index.html
@@ -11,6 +11,67 @@
       box-sizing: border-box;
     }
 
+    nav h2 a {
+      color: var(#333);
+      font-size: 1.2rem;
+      padding: 1rem;
+      display: inline-block;
+    }
+
+    nav h2 a:hover,
+    nav h2 a:focus,
+    .links-menu a:hover,
+    .links-menu a:focus {
+      background-color: var(#fafafa);
+    }
+
+    /* Estilos para a lista ul contida no nav */
+    .links-menu {
+      list-style: none;
+
+      /* Atenção: neste ponto, fazemos com que os links
+    do menu iniciem escondidos (display:none).
+    Posteriormente, com ajuda do CSS combinado com JS,
+    faremos os controles para exibir/esconder de forma
+    alternada. */
+      display: none;
+    }
+
+    /* Estilos para os links contidos
+na ul dentro do nav */
+    .links-menu a {
+      color: var(#333);
+      font-weight: bold;
+      display: flex;
+      height: 50px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    /* Regra que será aplicada somente
+quando o menu for acionado para abertura */
+    .links-menu.aberto {
+      /* Ativando o flex fazemos
+    com que os links voltem a aparecer. */
+      display: flex;
+
+      /* Fazemos com que eles fiquem
+    um em cima do outro (flex coluna) */
+      flex-direction: column;
+
+      /* Ativamos position:absolute
+    e ajustamos a posição final dos links
+    usando propriedades de coordenadas. */
+      position: absolute;
+      left: 0;
+      right: 0;
+
+      background-color: var(#fafafa);
+    }
+
+
+
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -39,6 +100,7 @@
       justify-content: space-between;
 
     }
+
     .conteudo {
       flex: 1;
       /* tamanho minimo para conteudo */
@@ -60,6 +122,7 @@
       margin-bottom: 0.75rem;
       margin-left: 0.4rem;
     }
+
     .img-container {
       text-align: center;
       margin-top: 3rem;
@@ -83,6 +146,7 @@
       color: #fff;
       border-radius: 8px;
     }
+
     @media screen and (max-width: 768px) {
       .container {
         margin: 1rem;
@@ -101,9 +165,9 @@
       <nav>
         <h2><a href="">Menu &equiv;</a></h2>
         <ul class="links-menu">
-            <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
         </ul>
-    </nav>
+      </nav>
     </header>
     <!-- principal -->
     <div class="principal">
