--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     * {
       box-sizing: border-box;
     }
-/* estilização do menu */
+
+    /* estilização do menu */
 
     nav h2 a {
       color: var(#333);
@@ -129,6 +130,24 @@
       .container {
         margin: 1rem;
         padding: 1rem;
+      }
+    }
+
+    @media screen and (min-width: 570px) {
+      nav h2 {
+        display: none;
+      }
+
+      .links-menu {
+        display: flex;
+      }
+
+      nav {
+        width: 60%;
+      }
+
+      .links-menu li {
+        width: 100%;
       }
     }
   </style>
