--- a/index.html
+++ b/index.html
@@ -6,151 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Mayara Lingerie</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    /* estilização do menu */
-
-    nav h2 a {
-      color: var(#333);
-      font-size: 1.2rem;
-      padding: 1rem;
-      display: inline-block;
-    }
-
-    nav h2 a:hover,
-    nav h2 a:focus,
-    .links-menu a:hover,
-    .links-menu a:focus {
-      background-color: var(#fafafa);
-    }
-
-    .links-menu {
-      list-style: none;
-      display: none;
-    }
-
-    .links-menu a {
-      color: var(#333);
-      font-weight: bold;
-      display: flex;
-      height: 50px;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .links-menu.aberto {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      left: 0;
-      right: 0;
-      background-color: var(#fafafa);
-    }
-
-    /* ----------------------------------------------------------------------- */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #fafafa;
-      color: #333;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background-color: #fff;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-
-    }
-
-    .principal {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-
-    }
-
-    .conteudo {
-      flex: 1;
-      /* tamanho minimo para conteudo */
-      min-width: 290px;
-    }
-
-    h1,
-    h2 {
-      color: #0C0C0C;
-      /* tamanho da fonte responsiva */
-      font-size: calc(1.4rem + 0.5vw);
-      margin-left: 0.4rem;
-
-    }
-
-    p {
-      font-size: calc(0.9rem + 0.3vw);
-      line-height: 1.6;
-      margin-bottom: 0.75rem;
-      margin-left: 0.4rem;
-    }
-
-    .img-container {
-      text-align: center;
-      margin-top: 3rem;
-
-    }
-
-    .img-container img {
-      max-width: 100%;
-      border-radius: 50%;
-      /* limitando a largura maxima */
-      height: 250px;
-      width: 250px;
-    }
-
-    .conteudo img {
-      max-width: 100%;
-      padding: 1rem;
-    }
-
-    header {
-      color: #fff;
-      border-radius: 8px;
-    }
-
-    @media screen and (max-width: 768px) {
-      .container {
-        margin: 1rem;
-        padding: 1rem;
-      }
-    }
-
-    @media screen and (min-width: 570px) {
-      nav h2 {
-        display: none;
-      }
-
-      .links-menu {
-        display: flex;
-      }
-
-      nav {
-        width: 60%;
-      }
-
-      .links-menu li {
-        width: 100%;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/estyle-inicial.css">
 </head>
 
 <body>
