--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       <div class="img-container">
         <img src="imagens/logo-mayara.jpeg" alt="Mayara Lingerie">
       </div>
+      <!-- -----------------menu----------------- -->
       <nav>
         <h2><a href="">Menu &equiv;</a></h2>
         <ul class="links-menu">
           <li><a href="index.html">Home</a></li>
         </ul>
       </nav>
+      <!-- ______________________________________________________________ -->
     </header>
     <!-- principal -->
     <div class="principal">
