--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
       <!-- ______________________________________________________________ -->
     </header>
-    <!-- principal -->
+    <!-- -------------------principal------------------- -->
     <div class="principal">
       <div class="conteudo">
         <hr>
@@ -36,6 +36,7 @@
     </div>
   </div>
   </div>
+  <!-- ----------------------------------------------------------------------------- -->
   <script src="js/menu.js"></script>
 </body>
 
