--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <h2><a href="">Menu &equiv;</a></h2>
         <ul class="links-menu">
           <li><a href="index.html">Home</a></li>
+          <li><a href="">Calcinhas</a></li>
+
         </ul>
       </nav>
       <!-- ______________________________________________________________ -->
