--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <ul class="links-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="">Calcinhas</a></li>
+          
+          <li><a href="">Pijamas</a></li>
+          
+          <li><a href="">Sutiãs</a></li>
 
         </ul>
       </nav>
