--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
       </div>
       <!-- -----------------menu----------------- -->
       <nav>
-        <h2><a href="">Menu &equiv;</a></h2>
-        <ul class="links-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="">Calcinhas</a></li>
-          
-          <li><a href="">Pijamas</a></li>
-          
-          <li><a href="">Sutiãs</a></li>
-
+        <button id="menu-btn">Menu</button>
+        <ul class="menu">
+          <li><a href="#">Item 1</a></li>
+          <li><a href="#">Item 2</a></li>
+          <li><a href="#">Item 3</a></li>
+          <li class="dropdown">
+            <button class="dropdown-btn">Dropdown</button>
+            <ul class="dropdown-menu">
+              <li><a href="#">Subitem 1</a></li>
+              <li><a href="#">Subitem 2</a></li>
+              <li><a href="#">Subitem 3</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
       <!-- ______________________________________________________________ -->
