adicionado artes do corpo da pagina

--- a/index.html
+++ b/index.html
@@ -16,32 +16,22 @@
         <img src="imagens/logo-mayara.jpeg" alt="Mayara Lingerie">
       </div>
       <!-- -----------------menu----------------- -->
-      <nav>
-        <button id="menu-btn">Menu</button>
-        <ul class="menu">
-          <li><a href="#">Item 1</a></li>
-          <li><a href="#">Item 2</a></li>
-          <li><a href="#">Item 3</a></li>
-          <li class="dropdown">
-            <button class="dropdown-btn">Dropdown</button>
-            <ul class="dropdown-menu">
-              <li><a href="#">Subitem 1</a></li>
-              <li><a href="#">Subitem 2</a></li>
-              <li><a href="#">Subitem 3</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+
       <!-- ______________________________________________________________ -->
     </header>
+
     <!-- -------------------principal------------------- -->
     <div class="principal">
       <div class="conteudo">
         <hr>
         <h2>Principal</h2>
-        <img src="imagens/conjunto.jpeg" alt="">
-        <img src="imagens/saia.jpeg" alt="">
+
+        <img src="imagens/calcinhas.png" alt="">
+      
+        <img src="imagens/sutias.png" alt="">
+
         <img src="imagens/espartilho.jpeg" alt="">
+
       </div>
     </div>
   </div>
