--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 
       <!-- ______________________________________________________________ -->
     </header>
+    <!-- -----------------------destaques------------------------- -->
+
+
 
     <!-- -------------------principal------------------- -->
     <div class="principal">
-      
-      <div class="conteudo">
-        <hr>
-        <h2>Principal</h2>
 
+      <div class="conteudo">
         <img src="imagens/calcinhas.png" alt="">
-      
+
         <img src="imagens/sutias.png" alt="">
 
         <img src="imagens/espartilho.jpeg" alt="">
@@ -39,6 +39,8 @@
   </div>
   <!-- ----------------------------------------------------------------------------- -->
   <script src="js/menu.js"></script>
+
+
 </body>
 
 </html>
