--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
     </header>
     <!-- -----------------------destaques------------------------- -->
 
-
+    <div class="carousel">
+      <div class="carousel-inner" id="carouselItems">
+          <img src="imagens/calcinhas.png" alt="Calcinhas" class="carousel-item active">
+          <img src="imagens/sutias.png" alt="Sutiãs" class="carousel-item">
+          <img src="imagens/espartilho.jpeg" alt="Espartilho" class="carousel-item">
+      </div>
+      <button class="carousel-control prev" onclick="moveSlide(-1)">❮</button>
+      <button class="carousel-control next" onclick="moveSlide(1)">❯</button>
+  </div>
 
     <!-- -------------------principal------------------- -->
     <div class="principal">
@@ -39,6 +47,7 @@
   </div>
   <!-- ----------------------------------------------------------------------------- -->
   <script src="js/menu.js"></script>
+  <script src="js/carousel.js"></script>
 
 
 </body>
