carousel (pré alpha)

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <div class="carousel">
       <div class="carousel-inner" id="carouselItems">
-          <img src="imagens/calcinhas.png" alt="Calcinhas" class="carousel-item active">
-          <img src="imagens/sutias.png" alt="Sutiãs" class="carousel-item">
-          <img src="imagens/espartilho.jpeg" alt="Espartilho" class="carousel-item">
+          <img src="imagens/vestido-preto.jpeg" alt="" class="carousel-item active">
+          <img src="imagens/shorts-aranha.jpeg" alt="S" class="carousel-item">
+          <img src="imagens/conjunto-renda-rose.jpeg" alt="" class="carousel-item">
       </div>
       <button class="carousel-control prev" onclick="moveSlide(-1)">❮</button>
       <button class="carousel-control next" onclick="moveSlide(1)">❯</button>
