--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <img src="imagens/sutias.png" alt="">
 
-        <img src="imagens/espartilho.jpeg" alt="">
+        <img src="imagens/pijamas.png" alt="">
 
       </div>
     </div>
