--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   <title>Mayara Lingerie</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/estyle-inicial.css">
 </head>
  
@@ -28,7 +30,11 @@
       <div class="img-container">
         <a href="index.html"><img src="imagens/logo-mayara.jpeg" alt="Mayara Lingerie"></a>
       </div>
-      <!-- ______________________________________________________________ -->
+      
+      <!-- Carrinho e lupa -->
+
+
+
     </header>
     <!-- -----------------------destaques------------------------- -->
  
@@ -60,6 +66,8 @@
   <script src="js/menu.js"></script>
   <script src="js/carousel.js"></script>
  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
  
 </html>
