--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <!-- div -------------------------------final da container--------------------------- -->
   </div>
-
+<!-- -----------------------------------------rodapé------------------------------------- -->
   <footer class="bg-light text-center text-lg-start mt-5">
     <div class="container p-4">
       <div class="row">
