--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         <a href=""><img src="imagens/sutias.png" alt=""></a>
       </figure>
       <figure>
+        <a href=""><img src="imagens/conjunto.png" alt=""></a>
+      </figure>
+      <figure>
         <a href=""><img src="imagens/pijamas.png" alt=""></a>
       </figure>
     </div>
