--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <nav class="navbar bg-body-tertiary fixed-top">
+    <nav class="navbar bg-transparent fixed-top" style="background-color: transparent;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Mayara Lingerie</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -50,6 +50,7 @@
         </div>
       </div>
     </nav>
+  </div>
     <!-----------------------Carousel--------------------------- -->
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
