--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imagens/pijama-carousel.png" class="d-block w-100" alt="...">
+          <img src="imagens/conjunto-renda-rose.jpeg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="imagens/pijama-carousel.png" class="d-block w-100" alt="...">
