--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
       <figure>
         <a href=""><img src="imagens/pijamas.png" alt=""></a>
       </figure>
+      <figure>
+        <a href=""><img src="imagens/logo sem fundo.png" alt=""></a>
+      </figure>
     </div>
     <!-- div -------------------------------final da container--------------------------- -->
   </div>
